--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
       href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Poppins:wght@400;500&family=Sigmar&display=swap"
       rel="stylesheet"
     />
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/theme-toggles@4.10.1/css/InnerMoon.min.css">
+
   </head>
   <body>
     <style>
